Changed some details in PrivateChannel, and fixed some tests to use acxtual db instead of mocking. More fixing to come